# tg-video-stream

./: .env  .env.example  .eslintignore  .gitignore  .npmignore  .pre-commit-config.yaml  .prettierignore  GEMINI.md  IMPLEMENTATION_PROGRESS_PHASE4.md  IMPLEMENTATION_PROGRESS_PHASE5.md  NEXT_PHASE_INSTRUCTIONS.md  OUTSTANDING_TASKS_REPORT.md  P2_IMPLEMENTATION_REPORT.md  PROJECT_STRUCTURE_GUIDELINES.md  PROJECT_SUMMARY.md  README.md  RUN.txt  STRUCTURE_QUICK_REFERENCE.md  UI_UX_REVIEW.md  debug_channel_playlist.py  dev.ps1  docker-compose.yml  generate_session.py  main.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  start-production.bat  test_playlist.db  tg_video_streamer.service
admin/: generate_session_and_list_dialogs.py  generate_session_telethon.py  get_chat_id.py
ai-instructions/: DEPLOYMENT_SYNC_RULE.md  README.md  components-library-rule.md  variations-decorator.md
backend/: .env.example  Dockerfile  check_db.py  check_db_slots.py  debug_run.py  dev.db  run.py  (+6 more)
rust-transcoder/: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  clippy.toml
rust-transcoder/src/: error.rs  lib.rs  main.rs
rust-transcoder/src/api/: health.rs  metrics.rs  mod.rs  transcode.rs
rust-transcoder/src/models/: enums.rs  mod.rs  transcode.rs
rust-transcoder/src/transcoder/: ffmpeg.rs  filters.rs  mod.rs  profiles.rs
rust-transcoder/tests/: contract_filters_test.rs  contract_health_test.rs  contract_metrics_test.rs  contract_transcode_test.rs  unit_ffmpeg_test.rs  unit_filters_test.rs
rust-transcoder/tests/common/: mod.rs
(+773 files in other folders)
